--- a/styles/Menu.module.scss
+++ b/styles/Menu.module.scss
@@ -1,111 +1,117 @@
-.menuContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 400px;
-    max-width: 90%;
-    height: 100%;
-    background-color: #fcfcfc;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 11;
-    transform: translateX(400px);
-    transition: transform 0.3s ease-in-out;
-    &.active{
-        transform: translateX(0);
-    }   
+@use "variables";
+
+.menuContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  max-width: 90%;
+  height: 100%;
+  background-color: #fcfcfc;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 11;
+  transform: translateX(400px);
+  transition: transform 0.3s ease-in-out;
+  &.active {
+    transform: translateX(0);
+  }
 }
 
-.menuOverlay{
-    background-color: rgba(0,0,0,0.5);
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    display: none;
-    &.active{
-        display: block;
-    }
+.menuOverlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  display: none;
+  border-radius: 10px;
+  &.active {
+    display: block;
+  }
 }
 
-.menuButton{
-    position: fixed;
+.menuButton {
+  position: fixed;
+  width: 30px;
+  height: 30px;
+  top: 1rem;
+  right: 1rem;
+  &:before {
+    content: "";
+    left: -2px;
+    top: 11px;
+    display: block;
     width: 30px;
-    height: 30px;
-    top: 1rem;
-    right: 1rem;
-    &:before{
-        content: "";
-        left: -2px;
-        top: 11px;
-        display: block;
-        width: 30px;
-        height: 2px;
-        background-color: black;
-        border:  2px solid rgb(0, 0, 0);
-        position: absolute;
-        transform: translateY(-10px);
-    }
-    &:after{
-        content: "";
-        left: -2px;
-        top: 11px;
-        display: block;
-        width: 30px;
-        height: 2px;
-        background-color: black;
-        border:  2px solid rgb(0, 0, 0);
-        position: absolute;
-        transform: translateY(10px);
-    }
-    &>.menuButtonLine{
-        display: block;
-        width: 34px;
-        height: 5px;
-        background-color: black;
-        border:  2px solid rgb(0, 0, 0);
-        position: absolute;
-        transform: translate(-2px, 12px);
-    }
-    z-index: 1;
-}
-
-
-
-.closeButton{
+    height: 2px;
+    background-color: black;
+    border: 2px solid rgb(0, 0, 0);
     position: absolute;
-    top: 1rem;
-    right: 1rem;
+    transform: translateY(-10px);
+    border-radius: variables.$Border-Rounded;
+  }
+  &:after {
+    content: "";
+    left: -2px;
+    top: 11px;
+    display: block;
     width: 30px;
-    height: 30px;
-    background-color: transparent;
-    cursor: pointer;
-    &:before{
-        content: "";
-        left: -2px;
-        top: 11px;
-        display: block;
-        width: 30px;
-        height: 2px;
-        background-color: black;
-        border:  2px solid rgb(0, 0, 0);
-        position: absolute;
-        transform: rotateZ(45deg);
-    }
-    &:after{
-        content: "";
-        left: -2px;
-        top: 11px;
-        display: block;
-        width: 30px;
-        height: 2px;
-        background-color: black;
-        border:  2px solid rgb(0, 0, 0);
-        position: absolute;
-        transform: rotateZ(-45deg);
-    }
+    height: 2px;
+    background-color: black;
+    border: 2px solid rgb(0, 0, 0);
+    position: absolute;
+    transform: translateY(10px);
+    border-radius: variables.$Border-Rounded;
+  }
+  & > .menuButtonLine {
+    display: block;
+    width: 34px;
+    height: 6px;
+    background-color: black;
+    border: 2px solid rgb(0, 0, 0);
+    position: absolute;
+    transform: translate(-2px, 11px);
+    border-radius: variables.$Border-Rounded;
+  }
+  z-index: 1;
+}
+
+.closeButton {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  cursor: pointer;
+  &:before {
+    content: "";
+    left: -2px;
+    top: 11px;
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: black;
+    border: 2px solid rgb(0, 0, 0);
+    position: absolute;
+    transform: rotateZ(45deg);
+    border-radius: variables.$Border-Rounded;
+  }
+  &:after {
+    content: "";
+    left: -2px;
+    top: 11px;
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: black;
+    border: 2px solid rgb(0, 0, 0);
+    position: absolute;
+    transform: rotateZ(-45deg);
+    border-radius: variables.$Border-Rounded;
+  }
 }
