remove colour change

--- a/styles/ActivityCard.module.scss
+++ b/styles/ActivityCard.module.scss
@@ -9,7 +9,7 @@ $Check-colour: white;
   margin: 0 0 8px 0;
 
   &.remove {
-    background-color: rebeccapurple;
+    background-color: rgb(255, 89, 158);
   }
   &.dragging {
     background-color: lightgreen;
